# rust_pico

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
