[package]
name = "rust_pico"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
embedded-graphics = "0.7.1"
embedded-hal = "0.2.7"
embedded-time = "0.12.1"
nb = "1.0.0"
panic-halt = "0.2.0"
rp-pico = "0.4.1"
rp2040-boot2 = "0.2.0"
rp2040-hal = "0.5.0"
ssd1306 = "0.7.0"
